--- a/frontend/src/shared/components/baseCard/baseCard.css
+++ b/frontend/src/shared/components/baseCard/baseCard.css
@@ -1,11 +1,11 @@
 .base-card {
     --card-text-width: 400px;
 
-    display: block;
     position: relative;
     width: auto;
     min-height: 100px;
     min-width: 330px;
+    max-width: 45vw;
     overflow: auto;
     border-radius: 15px;
 
